[metadata]
name = carbonix
long_description = file: README.md
keywords = []

[options]
packages = find:
include_package_data = true
install_requires =
    colour
    dash
    gunicorn
    numpy
    pandas
    pyvis
    pyyaml
    requests

[options.extras_require]
dev =
    black
    isort
    pydocstyle
    pylint
    pytest
    pytest-cov
    pytest-html
    pytest-xdist
    sphinx<2
    sphinx-copybutton
setup =
    setuptools
    sphinx
    sphinx-copybutton
    wheel

zip_safe = True
